# ego-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.claude/: settings.local.json
dashboard/: .env.example  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
dashboard/docs/: api.md  configuration.md  getting-started.md  operations.md
dashboard/frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  constants.ts  desires.test.ts  desires.ts  main.tsx  styles.css  types.ts
dashboard/frontend/src/components/history/: desire-history-chart-utils.ts  desire-history-chart.test.tsx  desire-history-chart.tsx  emotion-distribution-chart.test.tsx  emotion-distribution-chart.tsx  emotion-distribution-utils.ts  emotion-timeline-chart.test.tsx  emotion-timeline-chart.tsx  emotion-timeline-utils.test.ts  emotion-timeline-utils.ts  history-tab.tsx  intensity-chart.tsx  memory-network-panel.test.tsx  memory-network-panel.tsx  notion-panel.test.tsx  notion-panel.tsx  tool-usage-chart-utils.ts  tool-usage-chart.test.tsx  tool-usage-chart.tsx  valence-arousal-chart.test.tsx  valence-arousal-chart.tsx
dashboard/frontend/src/components/layout/: dashboard-header.test.tsx  dashboard-header.tsx  time-range-controls.tsx
dashboard/frontend/src/components/logs/: logs-tab.tsx
dashboard/frontend/src/components/memory/: memory-detail-panel.test.tsx  memory-detail-panel.tsx  memory-edge.tsx  memory-filter-panel.test.tsx  memory-filter-panel.tsx  memory-graph-legend.test.tsx  memory-graph-legend.tsx  memory-graph-palette.ts  memory-graph-stats.test.tsx  memory-graph-stats.tsx  memory-graph-utils.test.ts  memory-graph-utils.ts  memory-graph.tsx  memory-node.tsx  memory-search-bar.tsx  memory-tab.test.tsx  memory-tab.tsx  notion-detail-panel.tsx  notion-node.tsx
dashboard/frontend/src/components/now/: activity-feed.test.tsx  activity-feed.tsx  anomaly-alerts.tsx  circumplex-card.test.tsx  circumplex-card.tsx  circumplex-chart.test.tsx  circumplex-chart.tsx  desire-radar.test.tsx  desire-radar.tsx  emotion-status.test.tsx  emotion-status.tsx  now-tab.tsx  relationship-status.test.tsx  relationship-status.tsx  session-summary.test.tsx  session-summary.tsx  status-indicator.tsx
dashboard/frontend/src/hooks/: use-anomalies.ts  use-dashboard-socket.test.tsx  use-dashboard-socket.ts  use-desire-catalog.test.tsx  use-desire-catalog.ts  use-force-layout.ts  use-history-data.test.tsx  use-history-data.ts  use-log-data.ts  use-memory-network.test.tsx  use-memory-network.ts  use-timestamp-formatter.ts
dashboard/frontend/src/test/: setup.ts
dashboard/scripts/: dedupe_telemetry.py  migrate_emotion_telemetry.py
dashboard/src/ego_dashboard/: __init__.py  __main__.py  api.py  constants.py  dedupe_telemetry.py  desire_catalog.py  ingestor.py  migrate_emotion_telemetry.py  models.py  settings.py  sql_store.py  store.py  telemetry_identity.py
dashboard/tests/: test_api.py  test_dedupe_telemetry.py  test_desire_catalog.py  test_docker_compose.py  test_ingestor.py  test_migrate_emotion_telemetry.py  test_settings.py  test_sql_store.py  test_store.py
ego-mcp/: .coverage  CHANGELOG.md  README.md  pyproject.toml
ego-mcp/docs/: migration-v1.0.0.md  tool-reference.md  workspace-guide.md
ego-mcp/examples/: AGENTS.md  HEARTBEAT.md  SOUL.md
ego-mcp/src/ego_mcp/: __init__.py  __main__.py  _lexical_index.py  _memory_formatting.py  _memory_queries.py  _memory_scoring.py  _memory_serialization.py  _memory_store.py  _server_backend_configure_desires.py  _server_backend_handlers.py  _server_context.py  _server_emotion_formatting.py  _server_handlers.py  _server_param_validation.py  _server_runtime.py  _server_surface_attune.py  _server_surface_core.py  _server_surface_handlers.py  _server_surface_memory.py  _server_surface_person.py  _server_tools.py  absence.py  anticipation.py  association.py  chromadb_compat.py  config.py  consolidation.py  current_interest.py  desire.py  desire_blend.py  desire_catalog.py  desire_satisfaction.py  embedding.py  embers.py  emergent_desires.py  episode.py  hopfield.py  impulse.py  interoception.py  local_chromadb.py  (+14 more)
ego-mcp/src/ego_mcp/migrations/: 0002_desire_rebalance.py  0003_notion_content_titles.py  0004_notion_fields.py  0004_release_043.py  0005_desire_state_split.py  0006_emergent_desire_ids.py  0007_desire_catalog_v2.py  0008_emergent_cascade_defaults.py  0009_notion_meta_fields.py  __init__.py
ego-mcp/tests/: conftest.py  test_absence.py  test_anticipation.py  test_association.py  test_attune.py  test_chromadb_compat.py  test_config.py  test_configure_desires.py  test_consolidation.py  test_current_interest.py  test_desire.py  test_desire_blend.py  test_desire_satisfaction.py  test_embedding.py  test_embers.py  test_emotion_formatting.py  test_episode.py  test_hopfield.py  test_impulse.py  test_integration.py  test_interoception.py  test_involuntary_persons.py  test_lexical_index.py  test_logging_utils.py  test_mcp_sdk_e2e.py  test_memory.py  test_memory_formatting.py  test_memory_queries.py  test_memory_scoring.py  test_memory_serialization.py  test_migrations.py  test_notion.py  test_notion_migration.py  test_preciousness.py  test_proust.py  test_recall_persons.py  test_recall_surface.py  test_relationship.py  test_relationship_wording.py  test_ripening.py  (+12 more)
(+84 files in other folders)
