[project]
name = "ego-dashboard"
version = "0.2.4"
description = "Dashboard backend for ego-mcp telemetry"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "uvicorn>=0.35.0",
  "websockets>=15.0",
  "chromadb>=0.5.0",
  "networkx>=3.4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "httpx>=0.28.0",
  "types-networkx>=3.6.1.20260402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ego_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:chromadb.telemetry.opentelemetry.*",
]

[tool.ruff]
line-length = 100

target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = ["src"]
packages = ["ego_dashboard"]
