[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ego-mcp"
version = "0.1.0"
description = "Cognitive scaffolding MCP server for LLM personality continuity"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "pydantic>=2.12,<2.13",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ego_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
