[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ego-mcp"
version = "1.2.0"
description = "Cognitive scaffolding MCP server for LLM personality continuity"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "pydantic>=2.12,<2.13",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ego_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16.*:DeprecationWarning:chromadb\\..*",
]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
extend-ignore = ["I"]

[tool.coverage.run]
omit = [
    "src/ego_mcp/__main__.py",
    "src/ego_mcp/local_chromadb.py",
]

[tool.isort]
profile = "black"
line_length = 88

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "numpy",
    "numpy.*",
    "httpx",
    "httpx.*",
    "pydantic",
    "pydantic.*",
    "pydantic_settings",
    "pydantic_settings.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ego_mcp.chromadb_compat"]
disable_error_code = ["misc", "no-any-return"]
